# cheetah

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CXIview.py  README.md  cheetah-crawler.py  cheetah-gui.py  compileme  cxiview.py  peakogram.py  pyCXIview.py  scons_recompile  testme  upload-lcls  upload-xfel
source/: CMakeLists.txt
source/cheetah-ab.xcodeproj/: project.pbxproj
source/cheetah-cbf/: main-cbf.cpp
source/cheetah-euxfel/: CMakeLists.txt  Makefile  PNGFile.cpp  PNGFile.h  TextManager.h  agipd_calibrator.cpp  agipd_calibrator.h  agipd_module_reader.cpp  agipd_module_reader.h  agipd_read.h  agipd_reader.cpp  agipd_reader.h  cheetah-euxfel.cpp  hdf5_functions.cpp  hdf5_functions.h  main.cpp
source/cheetah_psana/: CMakeLists.txt  SConscript
source/cheetah_psana/include/: cheetah_psana.h
source/cheetah_psana/src/: cheetah_psana.cpp  cheetah_psana.cpp.rej  event_copy.cpp
source/jungfrau/src/: jungfrau.py
source/libcheetah/: .sit-tag  CMakeLists.txt  SConscript  importCheetah.py
source/libcheetah/doc/: ChangeLog  README
source/libcheetah/include/: ImageRectangle.h  Point.h  Point2D.h  cheetah.h  cheetahConversion.h  cheetahEvent.h  cheetahGlobal.h  cheetahmodules.h  detectorGeometry.h  detectorObject.h  hitfinders.h  mask.h  myTimer.h  peakFinder.h  peakfinder8.h  peakfinder9.h  pnCcdWorkarounds.h  pythonWrapperConversions.h  radialBackgroundSubtraction.h  saveCXI.h  streakFinder.h  streakfinder_wrapper.h
source/libcheetah/src/: .depend  assemble2DImage.cpp  backgroundCorrection.cpp  cheetahConversion.cpp  data2d.cpp  dataVersion.cpp  detectorCorrection.cpp  detectorGeometry.cpp  detectorObject.cpp  downsample.cpp  event.cpp  frameBuffer.cpp  global.cpp  gmd.cpp  histogram.cpp  hitfinders.cpp  integratePattern.cpp  libcheetah.cpp  (+29 more)
(+201 files in other folders)
