
ADD_SUBDIRECTORY(libcheetah)

if(BUILD_CHEETAH_PSANA)
ADD_SUBDIRECTORY(cheetah_psana)
endif(BUILD_CHEETAH_PSANA)

if(BUILD_PSANA)
ADD_SUBDIRECTORY(psana)
endif(BUILD_PSANA)

if(BUILD_CHEETAH_MYANA)
ADD_SUBDIRECTORY(cheetah_myana)
endif(BUILD_CHEETAH_MYANA)

if(BUILD_CHEETAH_EUXFEL)
ADD_SUBDIRECTORY(cheetah-euxfel)
endif(BUILD_CHEETAH_EUXFEL)

if(BUILD_CHEETAH_SACLA)
ADD_SUBDIRECTORY(cheetah-sacla)
endif(BUILD_CHEETAH_SACLA)

if (BUILD_CHEETAH_CBF)
ADD_SUBDIRECTORY(cheetah-cbf)
endif (BUILD_CHEETAH_CBF)
